load("@build_bazel_rules_apple//apple:apple.bzl",
     "apple_dynamic_framework_import")
package(
    default_visibility = ["//visibility:public"],
)

# Qt header files (e.g. qchar.h) are in lib/QtCore.framework/Headers/,
# and included as "qchar.h" and <QtCore/qchar.h>.
# The combination of includes, include_prefix and strip_include_prefix below
# addresses this requirement.
cc_library(
    name = "qt_mac_core",
    hdrs = glob(["lib/QtCore.framework/Headers/*"]),
    includes = [
      "lib/QtCore.framework/Headers",
      "lib/QtCore.framework/Headers/QtCore",
    ],
    include_prefix = "QtCore",
    strip_include_prefix = "lib/QtCore.framework/Headers",
)

cc_library(
    name = "qt_mac_gui",
    hdrs = glob(["lib/QtGui.framework/Headers/*"]),
    includes = [
      "lib/QtGui.framework/Headers",
      "lib/QtGui.framework/Headers/QtGui",
    ],
    include_prefix = "QtGui",
    strip_include_prefix = "lib/QtGui.framework/Headers",
)

cc_library(
    name = "qt_mac_widgets",
    hdrs = glob(["lib/QtWidgets.framework/Headers/*"]),
    includes = [
      "lib/QtWidgets.framework/Headers",
      "lib/QtWidgets.framework/Headers/QtWidgets",
    ],
    include_prefix = "QtWidgets",
    strip_include_prefix = "lib/QtWidgets.framework/Headers",
)

cc_library(
    name = "qt_mac",
    deps = [
      ":qt_mac_core",
      ":qt_mac_gui",
      ":qt_mac_widgets",
    ],
)

# Versions/5/QtCore and QtCore are same and redudant, it should be merged.
# Versions/5/QtCore is actually used by the binary (see: otool -l).
# QtCore is necessary for build. (see: imported_dynamic_framework_processor.py).

apple_dynamic_framework_import(
    name = "QtCore_mac",
    framework_imports = glob(
        include = [
            "lib/QtCore.framework/Versions/5/QtCore",
            "lib/QtCore.framework/QtCore",
            "lib/QtCore.framework/Resoures/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtGui_mac",
    framework_imports = glob(
        include = [
          "lib/QtGui.framework/Versions/5/QtGui",
          "lib/QtGui.framework/QtGui",
          "lib/QtGui.framework/Resoures/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtPrintSupport_mac",
    framework_imports = glob(
        include = [
          "lib/QtPrintSupport.framework/Versions/5/QtPrintSupport",
          "lib/QtPrintSupport.framework/QtPrintSupport",
          "lib/QtPrintSupport.framework/Resoures/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtWidgets_mac",
    framework_imports = glob(
        include = [
          "lib/QtWidgets.framework/Versions/5/QtWidgets",
          "lib/QtWidgets.framework/QtWidgets",
          "lib/QtWidgets.framework/Resoures/**",
        ],
    ),
)

filegroup(
    name = "libqcocoa",
    srcs = ["plugins/platforms/libqcocoa.dylib"],
)

exports_files(glob(["bin/*"]))
