load("@build_bazel_rules_apple//apple:apple.bzl",
     "apple_dynamic_framework_import")
package(
    default_visibility = ["//visibility:public"],
)

# Qt header files (e.g. qchar.h) are in lib/QtCore.framework/Headers/,
# and included as "qchar.h" and <QtCore/qchar.h>.
# The combination of includes, include_prefix and strip_include_prefix below
# addresses this requirement.
cc_library(
    name = "qt_mac_core",
    hdrs = glob(["lib/QtCore.framework/Headers/*"]),
    includes = [
      "lib/QtCore.framework/Headers",
      "lib/QtCore.framework/Headers/QtCore",
    ],
    include_prefix = "QtCore",
    strip_include_prefix = "lib/QtCore.framework/Headers",
)

cc_library(
    name = "qt_mac_gui",
    hdrs = glob(["lib/QtGui.framework/Headers/*"]),
    includes = [
      "lib/QtGui.framework/Headers",
      "lib/QtGui.framework/Headers/QtGui",
    ],
    include_prefix = "QtGui",
    strip_include_prefix = "lib/QtGui.framework/Headers",
)

cc_library(
    name = "qt_mac_widgets",
    hdrs = glob(["lib/QtWidgets.framework/Headers/*"]),
    includes = [
      "lib/QtWidgets.framework/Headers",
      "lib/QtWidgets.framework/Headers/QtWidgets",
    ],
    include_prefix = "QtWidgets",
    strip_include_prefix = "lib/QtWidgets.framework/Headers",
)

cc_library(
    name = "qt_mac",
    deps = [
      ":qt_mac_core",
      ":qt_mac_gui",
      ":qt_mac_widgets",
    ],
)

# Versions/A/QtCore and QtCore are same and redudant, it should be merged.
# Versions/A/QtCore is actually used by the binary (see: otool -l).
# QtCore is necessary for build. (see: imported_dynamic_framework_processor.py).

apple_dynamic_framework_import(
    name = "QtCore_mac",
    framework_imports = glob(
        include = ["lib/QtCore.framework/**"],
        exclude = [
            "lib/QtCore.framework/Headers/**",
            "lib/QtCore.framework/Versions/A/Headers/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtGui_mac",
    framework_imports = glob(
        include = ["lib/QtGui.framework/**"],
        exclude = [
            "lib/QtGui.framework/Headers/**",
            "lib/QtGui.framework/Versions/A/Headers/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtPrintSupport_mac",
    framework_imports = glob(
        include = ["lib/QtPrintSupport.framework/**"],
        exclude = [
            "lib/QtPrintSupport.framework/Headers/**",
            "lib/QtPrintSupport.framework/Versions/A/Headers/**",
        ],
    ),
)

apple_dynamic_framework_import(
    name = "QtWidgets_mac",
    framework_imports = glob(
        include = ["lib/QtWidgets.framework/**"],
        exclude = [
            "lib/QtWidgets.framework/Headers/**",
            "lib/QtWidgets.framework/Versions/A/Headers/**",
        ],
    ),
)

filegroup(
    name = "libqcocoa",
    srcs = ["plugins/platforms/libqcocoa.dylib"],
)

exports_files(glob(["libexec/*"]))
